# docx2md

./: .gitignore  Cargo.toml  README.md  build.rs  output.md  pyproject.toml  test_samples.sh
.github/workflows/: perf-benchmark.yml  release-notes.yml  release.yml
docs/: API_POLICY.md
examples/: perf_benchmark.rs
examples/python_demo/: demonstration.py  output.md  run_demo.sh
examples/python_example/: demo.py  output.md  pyproject.toml
examples/rust_example/: Cargo.toml
examples/rust_example/src/: main.rs
libs/docx-rust/: Cargo.toml
libs/docx-rust/src/document/: drawing.rs  field_char.rs  hyperlink.rs  numbering.rs  run.rs
libs/docx-rust/src/formatting/: fonts.rs  indent.rs  lang.rs  line_rule.rs  spacing.rs  v_merge.rs
libs/docx-rust/tests/aaa/: aa.xlsx
libs/docx-rust/tests/aaa/19323黄鹏诉赵丛民间借贷判决（普通 到庭）---刘/customXml/_rels/: item1.xml.rels
libs/docx-rust/tests/aaa/19323黄鹏诉赵丛民间借贷判决（普通 到庭）---刘/docProps/: app.xml  core.xml  custom.xml
libs/docx-rust/tests/aaa/19323黄鹏诉赵丛民间借贷判决（普通 到庭）---刘/word/: document.xml  fontTable.xml  settings.xml  styles.xml
libs/docx-rust/tests/aaa/19323黄鹏诉赵丛民间借贷判决（普通 到庭）---刘/word/_rels/: document.xml.rels
libs/docx-rust/tests/aaa/AA1/: [Content_Types].xml
libs/docx-rust/tests/aaa/AA1/_rels/: .rels
libs/docx-rust/tests/aaa/AA1/customXml/: item1.xml  itemProps1.xml
libs/docx-rust/tests/aaa/AA1/word/: document.xml  footer1.xml  footer2.xml  numbering.xml  settings.xml  styles.xml
libs/docx-rust/tests/aaa/AA1/word/theme/: theme1.xml
libs/docx-rust/tests/aaa/aa_list/docProps/: app.xml  core.xml
libs/docx-rust/tests/aaa/aa_list/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
scripts/: check_perf_threshold.sh  generate_release_notes.sh  run_perf_benchmark.sh
src/: error.rs  lib.rs  localization.rs  main.rs
src/adapters/docx/: extractor.rs  mod.rs
src/converter/: context.rs  hyperlink.rs  image.rs  mod.rs  numbering.rs  paragraph.rs  run.rs  styles.rs  table.rs  table_grid.rs
src/core/: ast.rs
src/render/: escape.rs  markdown.rs  mod.rs
tests/: generated_regression_test.rs  golden_snapshot_test.rs  integration_test.rs  invariant_randomized_test.rs  parser_feature_test.rs
tests/golden/: deep_list_expected.md  notes_comments_expected.md
tests/output/: aa.md  aa_list.md  block_quotes.md  codeblock.md  comments.md  custom_style_no_reference.md  custom_style_preserve.md  custom_style_reference.md  definition_list.md  document-properties-short-desc.md  document-properties.md  greater_than_8_bit_zoom.md  headers.md  hyperlink_with_bidirectional_embedding_level.md  image.md  inline_code.md  inline_formatting.md  inline_images.md  link_in_notes.md  links.md  lists.md  lists_continuing.md  lists_div_bullets.md  lists_multiple_initial.md  lists_restarting.md  nested_anchors_in_header.md  notes.md  raw-blocks.md  raw-bookmarks.md  table_one_row.md  table_with_list_cell.md  tables.md  tables_separated_with_rawblock.md  track_changes_deletion.md  track_changes_insertion.md  track_changes_move.md  track_changes_scrubbed_metadata.md  unicode.md  verbatim_subsuper.md
