[package]
name = "dm2xcod"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "DOCX to Markdown converter written in Rust"
license = "MIT"
repository = "https://github.com/KimSeogyu/dm2xcod"
homepage = "https://github.com/KimSeogyu/dm2xcod"
documentation = "https://docs.rs/dm2xcod"
readme = "README.md"
keywords = ["docx", "markdown", "converter", "document", "office"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
default-run = "dm2xcod"

# Workspace removed - using external git dependency for docx-rust

[features]
default = []
python = ["pyo3"]

[dependencies]
docx-rust = { git = "https://github.com/KimSeogyu/docx-rs.git", branch = "master" }
base64 = "0.22"
thiserror = "2.0"
zip = "2.2"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[lib]
name = "dm2xcod"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
pretty_assertions = "1.4"
