[package]
name = "dm2xcod"
version = "0.3.6"
edition = "2021"
rust-version = "1.75"
description = "DOCX to Markdown converter written in Rust"
license = "MIT"
repository = "https://github.com/KimSeogyu/dm2xcod"
homepage = "https://github.com/KimSeogyu/dm2xcod"
documentation = "https://docs.rs/dm2xcod"
readme = "README.md"
keywords = ["docx", "markdown", "converter", "document", "office"]
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
include = [
    "src/**/*",
    "tests/**/*",
    "examples/python_example/*.py",
    "examples/python_example/*.toml",
    "examples/python_example/*.lock",
    "README.md",
    "pyproject.toml",
]
default-run = "dm2xcod"


[features]
default = []
python = ["pyo3"]

[dependencies]
rs-docx = "0.2.0"
base64 = "0.22"
thiserror = "2.0"
zip = "2.2"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[lib]
name = "dm2xcod"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
hard-xml = "1.27.0"
pretty_assertions = "1.4"
